<resources>
    <string name="app_name">Verbum Secretum</string>

    <!-- menu_menu -->

    <string name="menu_title">Verbum Secretum</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_choose">Choose another player</string>
    <string name="menu_play">Play</string>
    <string name="menu_rules">Rules</string>

    <!-- menu_login -->

    <string name="login_info">Enter your name or choose from existed players</string>
    <string name="login_login">login</string>
    <string name="login_confirm">ok</string>
    <string name="login_existed_player_name_tag">existed_palyer_name_tag</string>

    <!--string name="login_enter_word">enter your menu_login here</string-->

    <!-- settings -->

    <!-- menu_statistics -->

    <string name="statistics_title">Statistics</string>
    <string name="statistics_all">all games:</string>
    <string name="statistics_won">won games:</string>
    <string name="statistics_back">back to menu</string>
    <string name="statistics_all_games_tag">statistics_all_games_tag</string>
    <string name="statistics_won_games_tag">statistics_won_games_tag</string>


    <!-- room -->
    <string name="room_title">Connected players:"</string>
    <string name="room_ready">ready</string>
    <string name="room_back">back</string>
    <string name="room_empty_name">empty slot</string>
    <string name="room_common_error_message">error! reboot device</string>
    <string name="room_server_not_found_error_message">server not found</string>
    <string name="room_connected">connected</string>

    <!-- game -->
    <string name="game_ava_layout">ava_layout</string>
    <string name="game_player_name">player_name</string>
    <string name="game_played_cards">played_cards</string>
    <string name="game_choose_row">choose</string>
    <string name="game_invalid_move_message">invalide move</string>
    <string name="game_disconnected_message">disconnected</string>
    <string name="game_game_over_confirm">ok</string>
    <string name="game_winners">Winners:</string>
    <string name="game_last_players">Last players:</string>
    <string name="game_names">Names:</string>
    <string name="game_card">Card:</string>

    <!-- Rules -->
    <string name="rules_title">Rules:</string>

    <string name="rules_rules_text">
        The main goal is to stay alive. On your turn, draw the top card
        from the deck and add it to your hand. Then choose one of the two
        cards in your hand and discard it face up in front of you. Apply any
        effect on the card you discarded. You must apply its effect, even if it
        is bad for you. All discarded cards remain in front of the player who
        discarded them. This helps players to figure out which cards other players
        might be holding. Once you finish applying the card’s effect, the turn passes
        to the next player.
    </string>

    <string name="rules_cards_effects">Cards effects:</string>

    <string name="rules_c1_effect">
        Choose another card and another player. If that player has that card
        he or she is out of the round. (5 cards)
    </string>

    <string name="rules_c2_effect">
        Look at another player`s hand. (2 cards)
    </string>

    <string name="rules_c3_effect">
        You and another player secretly compare hands. The player with
        the lower value is out of the round. (2 cards)
    </string>

    <string name="rules_c4_effect">
        Until next turn, ignore all effects from other players cards. (2 cards)
    </string>

    <string name="rules_c5_effect">
        Choose any player including yourself to discard his or her hand
        and draw a new card. (2 cards)
    </string>

    <string name="rules_c6_effect">
        Trade hands with another player of your choice. (1 card)
    </string>

    <string name="rules_c7_effect">
        If you have this card and the 5th or 6th in your hand, you must
        discard this card. (1 card)
    </string>

    <string name="rules_c8_effect">
        If you discard this card, you are out of the round. (1 card)
    </string>

    <string name="rules_back">back to menu</string>
    <string name="login_incorrect_login">incorrect login</string>
    <string name="game_cards_counter">Cards in deck:</string>

    <string name="rules_c1_effect_short">Guess a player`s hand (5 cards)</string>
    <string name="rules_c2_effect_short">Look at a hand. (2 cards)</string>
    <string name="rules_c3_effect_short">Compare hands; Lower hand is out. (2 cards)</string>
    <string name="rules_c4_effect_short">Protect until next turn. (2 cards)</string>
    <string name="rules_c5_effect_short">One player discards his or her hand. (2 cards)</string>
    <string name="rules_c6_effect_short">Trade hands. (1 card)</string>
    <string name="rules_c7_effect_short">Discard if caught with 5th or 6th. (1 card)</string>
    <string name="rules_c8_effect_short">Lose if discarded. (1 card)</string>

</resources>
